--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ input, textarea {
     font-size: 20px;
 }
 
-/* VER.php */
+/* ver_empleado.php */
 h4 {
     font-size: 20px;
     color: #bd2d20;
